syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package pb;

option go_package = "./pb";

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int64 accountId = 5;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int64  accountId = 4;
}

message GetProductsRequest {
  uint64 skip = 1;
  uint64 take = 2;
  repeated string ids = 3;
  string query = 4;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int64 accountId = 5;
}

message DeleteProductRequest {
  string productId = 1;
  int64 accountId = 2;
}

message ProductResponse {
  Product product = 1;
}

message ProductsResponse {
  repeated Product products = 1;
}

service ProductService {
  rpc PostProduct (CreateProductRequest) returns (ProductResponse) {}
  rpc GetProduct (google.protobuf.StringValue) returns (ProductResponse) {}
  rpc GetProducts (GetProductsRequest) returns (ProductsResponse) {}
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse) {}
  rpc DeleteProduct (DeleteProductRequest) returns (google.protobuf.Empty) {}
}
